<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="css.cis3334.menusample2017.MainActivity"
    tools:showIn="@layout/activity_main"
    app:layout_scrollFlags="scroll">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_xml_file_text"
        android:id="@+id/textView" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerXML"
        android:entries="@array/planets_array"
         />

    <TextView
        android:text="@string/spinner_with_items_from_java_arraylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerJava"
         />

    <TextView
        android:text="Custom spinner "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCustom" />

    <Button
        android:text="@string/display_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDisplay"
        android:onClick="buttonClick1" />

    <Button
        android:text="@string/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />

    <Button
        android:text="@string/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3" />

    <TextView
        android:text="@string/selected_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDisplayItem" />

</LinearLayout>
